operators/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-https-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: default-gateway-options
  listeners:
  - name: https
    port: 443
    hostname: "*.home.alden.ai"
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: home-cert-tls
          group: ''
          kind: Secret
  - name: forgejo-ssh
    port: 22
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
